[package]
name = "ws_cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "std", "help", "usage", "error-context"] }
serde = { version = "1.0.195", features = ["derive"] }
serde-xml-rs = "0.6.0"
